# maistro-studio

./: .gitattributes  AI_Feature_Test_Strategy.md  ARCHITECTURE.md  BRANDING_ANALYSIS.md  CHECKLIST.md  LICENSE  README.md  README_NEW.md  ROADMAP.md  SYSTEM_DIAGRAM.md  WEBSITE_CHECKLIST.md
docs/ai/: AI_Features_Preliminary_Documentation.md
share/sound/: FluidR3Mono_GM.sf3  MS Basic.sf3
src/appshell/: appshell.qrc
src/appshell/qml/AiFeatures/: AiGenerationPage.qml
src/appshell/qml/HomePage/: HomeMenu.qml  HomePage.qml
src/framework/ai/: AiController.cpp  AiController.h  AiMusicDataConverter.cpp  AiMusicDataConverter.h  AiMusicTypes.h  CMakeLists.txt  IAiMusicGenerator.h  aimodule.cpp  aimodule.h
src/framework/cmake/: MuseModules.cmake
